--- a/index.html
+++ b/index.html
@@ -4,9 +4,210 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./assets/styles/styles.css">
+    <title>Pavelko Sviatoslav | Vue.js Web Developer</title>
 </head>
 <body>
-    
+    <div class="wrapper">
+        <div class="header">
+            <div class="header__body">
+                <nav class="header__menu">
+                    <div class="menu-link"><a href="" class="menu-link__item">Home</a></div>
+                    <div class="menu-link"><a href="" class="menu-link__item">About</a></div>
+                    <div class="menu-link"><a href="" class="menu-link__item">Skills</a></div>
+                    <div class="menu-link"><a href="" class="menu-link__item">Portfolio</a></div>
+                    <div class="menu-link"><a href="" class="menu-link__item">Contacts</a></div>
+                </nav>
+            </div>
+        </div>
+        <section class="banner fullscreen">
+            <img class="banner__bg" src="./assets/img/banner2.jpg" alt="">
+            <div class="banner__body">
+                <div class="banner__title">Sviatoslav Pavelko</div>
+                <div class="banner__text">Front End Web Developer</div>
+                <nav class="banner__links">
+                    <div class="link-item"><a href="" class="link-item__link"></a></div>
+                    <div class="link-item"><a href="" class="link-item__link"></a></div>
+                    <div class="link-item"><a href="" class="link-item__link"></a></div>
+                    <div class="link-item"><a href="" class="link-item__link"></a></div>
+                    <div class="link-item"><a href="" class="link-item__link"></a></div>
+                </nav>
+            </div>
+            <div class="down-arrow"></div>
+        </section>
+        <section class="main-skills section fullscreen">
+            
+            <div class="main-skills__body container">
+                <div class="section-title">
+                    <div class="section-title__body">
+                        <div class="section-title__number">01</div>
+                        <div class="section-title__text">About</div>
+                    </div>
+                </div>
+                <div class="main-skills__info info">
+                    <div class="main-skills__about">
+                        <h2>Hello there,</h2>
+                        <p>
+                            Thank you for visiting my web site. <br><br>
+
+                            My name is Sviatoslav and I'm a Front-end developer with over 2 years experience in creating websites and web applications. Currently I live in Apolda, Germany and I'm looking for a job as a Front-end developer in Germany or remotely. <br><br>
+
+                            I have experience in developing mobile-first web applications using Vue and then converting it into a mobile application using React Native WebView. <br><br>
+
+                            Backend and databases are also not alien to me, I had experience working with them.
+                        </p>
+                    </div>
+                    <div class="main-skills__skills-sliders">
+                        <div class="slider">
+                            <div class="slider__label">HTML5</div>
+                            <div class="slider__row 82">
+                                <div class="slider__row__inner"></div>
+                            </div>
+                        </div>
+                        <div class="slider">
+                            <div class="slider__label">CSS3</div>
+                            <div class="slider__row 80">
+                                <div class="slider__row__inner"></div>
+                            </div>
+                        </div>
+                        <div class="slider">
+                            <div class="slider__label">JavaScript</div>
+                            <div class="slider__row 63">
+                                <div class="slider__row__inner"></div>
+                            </div>
+                        </div>
+                        <div class="slider">
+                            <div class="slider__label">Vue.js</div>
+                            <div class="slider__row 60">
+                                <div class="slider__row__inner"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="additional-skills section fullscreen">
+            <div class="additional-skills__body container">
+                <div class="additional-skills__info info">
+                    <div class="additional-skills__row">
+                        <div class="additional-skills__column" id="qwe">
+                            <div class="column-inner">
+                                <div class="column-title">Markup</div>
+                                <div class="column-list">
+                                    <div class="column-list__item">
+                                        HTML5
+                                    </div>
+                                    <div class="column-list__item">
+                                        CSS3
+                                    </div>
+                                    <div class="column-list__item">
+                                        Less, Sass, Scss
+                                    </div>
+                                    <div class="column-list__item">
+                                        Bootstrap, Materialize
+                                    </div>
+                                    <div class="column-list__item">
+                                        Gulp
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="additional-skills__column">
+                            <div class="column-inner">
+                                <div class="column-title">Development</div>
+                                <div class="column-list">
+                                    <div class="column-list__item">
+                                        JavaScript
+                                    </div>
+                                    <div class="column-list__item">
+                                        Vue.js (2,3)
+                                    </div>
+                                    <div class="column-list__item">
+                                        Vuex, Vue router
+                                    </div>
+                                    <div class="column-list__item">
+                                        JQuery
+                                    </div>
+                                    <div class="column-list__item">
+                                        REST API
+                                    </div>
+                                    <div class="column-list__item">
+                                        ES6
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="additional-skills__column">
+                            <div class="column-inner">
+                                <div class="column-title">Services</div>
+                                <div class="column-list">
+                                    <div class="column-list__item">
+                                        Git
+                                    </div>
+                                    <div class="column-list__item">
+                                        html2pdf
+                                    </div>
+                                    <div class="column-list__item">
+                                        Open Server
+                                    </div>
+                                    <div class="column-list__item">
+                                        Figma
+                                    </div>
+                                    <div class="column-list__item">
+                                        CodePen
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="additional-skills__column">
+                            <div class="column-inner">
+                                <div class="column-title">Additional</div>
+                                <div class="column-list">
+                                    <div class="column-list__item">
+                                        PHP (Laravel)
+                                    </div>
+                                    <div class="column-list__item">
+                                        MySQL
+                                    </div>
+                                    <div class="column-list__item">
+                                        WordPress
+                                    </div>
+                                    <div class="column-list__item">
+                                        Docker
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="section-title">
+                    <div class="section-title__body">
+                        <div class="section-title__number">02</div>
+                        <div class="section-title__text">Skills</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="projects section fullscreen">
+            <div class="container">
+                <div class="section-title">
+                    <div class="section-title__body">
+                        <div class="section-title__number">03</div>
+                        <div class="section-title__text">Projects</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <div class="contacts"></div>
+    </div>
+
+    <script>
+
+        document.getElementById('qwe').classList.add('active');
+        setTimeout(() => {
+            document.getElementById('qwe').classList.remove('active');
+        }, 600);
+
+    </script>
 </body>
 </html>
